# superhq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REMOTE.md
.github/workflows/: release.yml
assets/themes/: superhq-dark-syntax.json  superhq-dark.json
crates/superhq-remote-client/: Cargo.toml
crates/superhq-remote-client/demo/: README.md  build.sh  index.html  main.js  storage.js
crates/superhq-remote-client/src/: auth.rs  client.rs  lib.rs  wasm.rs
crates/superhq-remote-client/tests/: roundtrip.rs
crates/superhq-remote-client/web/: index.html  package.json  pnpm-lock.yaml
crates/superhq-remote-client/web/src/: App.tsx
crates/superhq-remote-client/web/src/components/: PWAUpdatePrompt.tsx  QrScannerModal.tsx  Screen.tsx
crates/superhq-remote-client/web/src/lib/: types.ts
crates/superhq-remote-client/web/src/routes/: home.tsx  workspace.tsx
crates/superhq-remote-client/web/src/state/: store.ts
crates/superhq-remote-proto/: Cargo.toml
docs/remote-control/: 03-desktop.md
migrations/: 004_paired_devices.sql  005_remote_control_enabled.sql  006_remote_endpoint_identity.sql  007_remote_host_shell_enabled.sql
scripts/: run.sh
specs/: 09-workspace-navigation-extraction.md  10-panel-item-traits.md  11-sandbox-service.md  12-split-terminal-rendering.md  16-remove-gpui-component.md
src/: assets.rs  main.rs  runtime.rs
src/agents/: claude.rs  codex.rs  cursor.rs  mod.rs  pi.rs
src/db/: mod.rs  queries.rs  schema.rs
src/sandbox/: agent_config.rs  agent_setup.rs  auth_gateway.rs  mod.rs  pty_adapter.rs  secrets.rs  service.rs
(+47 files in other folders)
