[package]
name = "superhq-remote-client"
version = "0.1.0"
edition = "2024"
description = "Client-side transport for SuperHQ remote control (browser WASM + native)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
superhq-remote-proto = { path = "../superhq-remote-proto" }
iroh = { version = "0.95", default-features = false }
anyhow = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["io-util", "sync", "macros"] }
futures-util = "0.3"

# WASM glue (compiled on both targets; unused cells on native are cheap)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tracing-subscriber-wasm = "0.1"
console_error_panic_hook = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
superhq-remote-host = { path = "../superhq-remote-host" }
